protocols/tests/adders/adder_d2/no_dontcare_conflict.out
error: Thread 0 (`add`) attempted conflicting assignment to 'a': current=4, new=1
   ┌─ adders/adder_d2/no_dontcare_conflict.prot:12:3
   │
12 │   DUT.a := a;
   │   ^^^^^^^^^^^ Thread 0 (`add`) attempted conflicting assignment to 'a': current=4, new=1

error: Thread 1 (`add`) attempted conflicting assignment to 'a': current=1, new=4
   ┌─ adders/adder_d2/no_dontcare_conflict.prot:12:3
   │
12 │   DUT.a := a;
   │   ^^^^^^^^^^^ Thread 1 (`add`) attempted conflicting assignment to 'a': current=1, new=4

Trace 0 failed: Thread(ConflictingAssignment { symbol_id: symbol1, symbol_name: "a", current_value: ValueOwned(00000000000000000000000000000100), new_value: ValueOwned(00000000000000000000000000000001), thread_idx: 0, transaction_name: "add", stmt_id: stmt1 })
Trace 0 failed: Thread(ConflictingAssignment { symbol_id: symbol1, symbol_name: "a", current_value: ValueOwned(00000000000000000000000000000001), new_value: ValueOwned(00000000000000000000000000000100), thread_idx: 1, transaction_name: "add", stmt_id: stmt1 })
Trace 0 execution failed.
